--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Book List</string>
     <string name="button_ok">确定</string>
     <string name="name">名称</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
